correção para a AF